--- a/flask_app/flask_podcast/templates/output.html
+++ b/flask_app/flask_podcast/templates/output.html
@@ -13,21 +13,48 @@
    <!-- Bootstrap core CSS -->
    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
 
-   <!-- Custom styles for this template -->
-   <link href="starter-template.css" rel="stylesheet">
+   <script type="text/javascript" src="../static/js/d3.min.js"></script>
+   <style type="text/css">
+    .axis path,
+    .axis line {
+      fill: none;
+      stroke: black;
+      shape-rendering: crispEdges;
+    }
 
-   <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-   <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-   <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
+    .axis text {
+      font-family: sans-serif;
+      font-size: 11px;
+    }
 
-   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-   <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    #tooltip {
+      position: absolute;
+      width: 200px;
+      height: auto;
+      padding: 10px;
+      background-color: white;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      border-radius: 10px;
+      -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+      -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.4);
+      pointer-events: none;
+    }
 
-   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-   <!--[if lt IE 9]>
-     <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-   <![endif]-->
+    #tooltip.hidden{
+      display: none;
+    }
+
+    #tooltip p{
+      margin: 0;
+      font-family: sans-serif;
+      font-size: 16px;
+      line-height: 20px;
+    }
+
+  </style>
+
  </head>
 
  <body>
@@ -59,6 +86,9 @@
         <h3>Podcasts Like {{ search_name }}:</h3>
       </div>
 
+      <div id="scatterplot">
+      </div>
+
       <table class="table table-hover">
       <tr><th>Similarity</th><th>Name</th><th></th></tr>
       {% for result in podcast_results %}
@@ -69,24 +99,13 @@
 
      </div><!-- /.container -->
 
-    <div class="container">
-     <!--  <div class="starter-template">
-        <h3>Another Result:</h3>
-        <p class="lead">Now we've taken the input and called a function from your package.<br>The result is {{the_result}}</p>
-      </div> -->
-
-
-      <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-      <script src="static/js/bootstrap.min.js"></script>
-
-
-     </div><!-- /.container -->
-
 
    <!-- Bootstrap core JavaScript
    ================================================== -->
-   <!-- Placed at the end of the document so the pages load faster -->
-   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script src="static/js/bootstrap.min.js"></script>
+
 </body>
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="static/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="../static/js/scatterplot.js"></script>
 </html>
