--- a/flask_app/flask_podcast/templates/typeahead.html
+++ b/flask_app/flask_podcast/templates/typeahead.html
@@ -69,6 +69,7 @@
 
 <script src="../static/js/bootstrap.min.js"></script>
 <script src="../static/js/typeahead.bundle.js"></script>
+<link href="../static/css/lavish-bootstrap.css" rel="stylesheet">
 
 <script type="text/javascript">
 
