play with scroll to row

--- a/flask_app/flask_podcast/static/css/scatterplot.css
+++ b/flask_app/flask_podcast/static/css/scatterplot.css
@@ -12,6 +12,7 @@
 	border-radius: 2px;
 	border-color: #000000;
   width: 40%;
+  position: fixed;
 }
 
 /* Creates a small triangle extender for the tooltip */
