working keyword search

--- a/flask_app/flask_podcast/templates/check_input.html
+++ b/flask_app/flask_podcast/templates/check_input.html
@@ -41,12 +41,12 @@
  <br><br>
  <div class="container">
 
-  <div class="starter-template">
-    <h2>thesauropodus</h2>
-    <p>a thesaurus for podcasts</p>
+  <div class="text-center">
+    <h1>thesauropod.us</h1>
+    <h4>a thesaurus for podcasts</h4>
   </div>
 
-  <div class = "container">
+<!--   <div class = "container">
 
     <form  action="/check_input" method="GET">
       <div class="form-group">
@@ -59,10 +59,10 @@
       </div>
 
     </form>
-  </div>
+  </div> -->
 
   <div class="container">
-    <div class="starter-template">
+    <div class="text-center">
       <h3>Did you mean...</h3>
       <p class="lead">
         {% for result in name_results %}
