don't show similarity score when loading

--- a/flask_app/flask_podcast/templates/output_force_layout.html
+++ b/flask_app/flask_podcast/templates/output_force_layout.html
@@ -10,6 +10,14 @@
 <!-- star CSS -->
  <link href="../static/css/star-rating.css" media="all" rel="stylesheet" type="text/css">
 
+ <style>
+  .similarity {
+    color: transparent;
+    background: transparent;
+    border-color: transparent;
+  }
+ </style>
+
  <!-- import JSON data -->
  <script>
  var mds_data = '{{ podcast_results|tojson }}';
