--- a/flask_app/flask_podcast/templates/base.html
+++ b/flask_app/flask_podcast/templates/base.html
@@ -49,6 +49,15 @@
     <script src="../static/js/jquery-1.12.0.min.js"></script>
     <script src="../static/js/bootstrap.min.js"></script>
     {% block scripts %}{% endblock %}
-
+    
+    <!-- Google Tag Manager -->
+    <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-P6G53G"
+    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P6G53G');</script>
+    <!-- End Google Tag Manager -->
 </body>
 </html>
